fix: background image from plans very large on mobile

--- a/src/pages/home/sections/ChoosePlan/plans.module.sass
+++ b/src/pages/home/sections/ChoosePlan/plans.module.sass
@@ -22,19 +22,21 @@
   .cardsBackground
     position: relative
     object-fit: fill
+    width: 100vw
+    height: 600px
   #contentRow
     position: absolute
     display: flex
     flex-flow: row wrap
     justify-content: space-around 
     gap: 50px
-    width: 100%
+    width: 90%
     padding: 20px 30px
     .cardItem
       display: flex
       justify-content: center
       align-items: center
-      width: 280px !important
+      width: 260px !important
       height: auto
       >:first-child
         display: flex
@@ -42,12 +44,12 @@
         height: 100%
         border: 2px solid #ddd
         >:last-child
-          padding: 12px
+          padding: 5px
       .description
         display: flex
         flex-direction: column
         justify-content: space-between
-        width: 90%
+        width: 100%
 
 .cardTitle
   font-size: 1.5rem
